[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/other/white_circle_64x64.png" type="Texture" id=1]
[ext_resource path="res://assets/emotion/kenney_emotespack/PNG/Vector/Style 6/emote_dots3.png" type="Texture" id=2]
[ext_resource path="res://assets/emotion/kenney_emotespack/PNG/Vector/Style 6/emote_cash.png" type="Texture" id=3]
[ext_resource path="res://assets/emotion/kenney_emotespack/PNG/Vector/Style 2/emote_exclamation.png" type="Texture" id=4]
[ext_resource path="res://assets/emotion/kenney_emotespack/PNG/Vector/Style 2/emote_question.png" type="Texture" id=5]
[ext_resource path="res://npc/npc_bravo/npc_bravo.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/supermarket.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/other/white-32x32.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 22.0907

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 80, 48 )

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="CanvasItemMaterial" id=7]
light_mode = 1

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 7 )

[sub_resource type="CanvasItemMaterial" id=9]
light_mode = 1

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.784314 )
border_width_top = 32
border_color = Color( 0.945098, 0.819608, 0.270588, 1 )
shadow_size = 16

[sub_resource type="DynamicFont" id=11]
size = 24
outline_size = 1
extra_spacing_top = 8
extra_spacing_char = 2
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=12]

[sub_resource type="DynamicFont" id=13]
size = 24
extra_spacing_top = 8
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0.784314 )
border_width_top = 32
border_color = Color( 0.945098, 0.819608, 0.270588, 1 )
shadow_size = 16

[sub_resource type="DynamicFont" id=15]
size = 24
outline_size = 1
extra_spacing_top = 8
extra_spacing_char = 2
font_data = ExtResource( 7 )

[node name="npc_bravo" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 6 )

[node name="shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.196078 )
position = Vector2( 0, -1.19209e-07 )
scale = Vector2( 1.25, 0.4375 )
texture = ExtResource( 1 )

[node name="graphics" type="Node2D" parent="."]

[node name="backpack" type="Polygon2D" parent="graphics"]
color = Color( 0.321569, 0.243137, 0.0666667, 1 )
polygon = PoolVector2Array( -18, -66, -22, -72, -32, -74, -40, -70, -46, -60, -50, -42, -46, -22, -40, -16, -34, -14, -30, -16, -26, -20 )

[node name="shirt" type="Polygon2D" parent="graphics"]
color = Color( 0.74902, 0.188235, 0.188235, 1 )
polygon = PoolVector2Array( 30, 0, 16, 4, 0, 6, -16, 4, -30, 0, -26, -8, -26, -56, -22, -62, -16, -66, 14, -66, 22, -62, 26, -56, 26, -7.98856 )

[node name="head" type="Polygon2D" parent="graphics"]
color = Color( 0.705882, 0.552941, 0.388235, 1 )
polygon = PoolVector2Array( -12, -66, -14, -76, -14, -82, -12, -86, -10, -88, -4, -90, 0, -90, 4, -90, 10, -88, 12, -86, 14, -82, 14, -76, 12, -66, 0, -64 )

[node name="eye" type="Polygon2D" parent="graphics"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 8, -82, 4, -82, 4, -80, 8, -80 )

[node name="Polygon2D" type="Polygon2D" parent="graphics"]
color = Color( 0.054902, 0.32549, 0.0588235, 1 )
polygon = PoolVector2Array( 14, -76, 6, -76, -2, -74, -6, -72, -8, -70, -12, -66, 0, -64, 12, -66 )

[node name="Polygon2D2" type="Polygon2D" parent="graphics"]
color = Color( 0.0862745, 0.113725, 0.317647, 1 )
polygon = PoolVector2Array( -16, -66, -6, -60, -2, -54, 0, -42, 0, 6, 16, 4, 16, -54, 14, -62, 10, -66, 0, -64, -12, -66 )

[node name="breath_position" type="Position2D" parent="graphics"]
position = Vector2( 22, -72 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -22 )
shape = SubResource( 1 )

[node name="name" type="Label" parent="."]
material = SubResource( 2 )
margin_left = -26.0
margin_top = -126.0
margin_right = 26.0
margin_bottom = -112.0
custom_styles/normal = SubResource( 3 )
text = "Bravo"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_detection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detection"]
self_modulate = Color( 1, 1, 1, 0.333333 )
shape = SubResource( 4 )

[node name="shop_emotion" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( -88, -115 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 192, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="shop_emotion"]
autoplay = "show"
anims/show = SubResource( 6 )

[node name="emotions_dialog" type="Node2D" parent="."]
material = SubResource( 7 )

[node name="hint_talk" type="Sprite" parent="emotions_dialog"]
visible = false
use_parent_material = true
position = Vector2( 76, -114 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
flip_h = true

[node name="Label" type="Label" parent="emotions_dialog/hint_talk"]
use_parent_material = true
margin_left = -16.0
margin_top = -36.0
margin_right = 72.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 8 )
text = "กด F เพื่อสนทนา"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_quest" type="Sprite" parent="emotions_dialog"]
visible = false
use_parent_material = true
position = Vector2( 0, -178 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="success_quest" type="Sprite" parent="emotions_dialog"]
visible = false
use_parent_material = true
position = Vector2( 1.69407e-21, -178 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )

[node name="general_shop" type="Node2D" parent="."]
visible = false
material = SubResource( 9 )
z_index = 20

[node name="shop" type="Panel" parent="general_shop"]
use_parent_material = true
margin_left = -464.0
margin_top = -240.0
margin_right = -48.0
margin_bottom = 242.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="general_shop/shop"]
use_parent_material = true
margin_right = 416.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ร้านค้า"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="general_shop/shop"]
use_parent_material = true
margin_left = 32.0
margin_top = 48.0
margin_right = 384.0
margin_bottom = 452.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_1" type="Panel" parent="general_shop/shop/GridContainer"]
use_parent_material = true
margin_right = 352.0
margin_bottom = 64.0
rect_min_size = Vector2( 352, 64 )
custom_styles/panel = SubResource( 12 )

[node name="TextureRect" type="TextureRect" parent="general_shop/shop/GridContainer/item_1"]
margin_left = 32.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 48.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="general_shop/shop/GridContainer/item_1"]
margin_left = 266.0
margin_top = 16.0
margin_right = 336.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 13 )
text = "ซื้อ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="general_shop/shop/GridContainer/item_1"]
margin_left = 98.0
margin_top = 26.0
margin_right = 161.0
margin_bottom = 40.0
text = "xxxxxxxxx"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_detail" type="Panel" parent="general_shop"]
use_parent_material = true
margin_left = 96.0
margin_top = -240.0
margin_right = 320.0
margin_bottom = -16.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="general_shop/player_detail"]
margin_right = 224.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "กระเป๋า"
align = 1
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="general_shop/player_detail"]
margin_left = 16.0
margin_top = 48.0
margin_right = 208.0
margin_bottom = 194.0
text = "xxxxx"
__meta__ = {
"_edit_use_anchors_": false
}
